--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "5.x",
+    "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "antd": "^4.21.0",
+    "antd": "^5.26.6",
+    "antd-style": "^3.7.1",
     "canvg": "^4.0.0",
     "gh-pages": "^4.0.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "stackblur-canvas": "^2.5.0",
     "web-vitals": "^2.1.0"
