--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "5.x",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/postcss": "^4.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "antd": "^5.26.6",
-    "antd-style": "^3.7.1",
     "canvg": "^4.0.0",
     "gh-pages": "^4.0.0",
+    "lucide-react": "^0.525.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "stackblur-canvas": "^2.5.0",
@@ -45,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
