--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.29.1",
     "stackblur-canvas": "^2.5.0",
     "web-vitals": "^2.1.0"
   },
